@@ -11,12 +11,19 @@ def test_task_failure(flask_celery):
     def failing_task():
         raise ValueError('foo')
 
-    t = failing_task.delay()
+    with mock.patch('elasticapm.traces.TransactionsStore.should_collect') as should_collect_mock:
+        should_collect_mock.return_value = True
+        t = failing_task.delay()
     assert t.status == 'FAILURE'
     assert len(apm_client.events[0]['errors']) == 1
     error = apm_client.events[0]['errors'][0]
     assert error['culprit'] == 'tests.contrib.celery.flask_tests.failing_task'
     assert error['exception']['message'] == 'ValueError: foo'
+
+    transaction = apm_client.events[1]['transactions'][0]
+    assert transaction['name'] == 'tests.contrib.celery.flask_tests.failing_task'
+    assert transaction['type'] == 'celery'
+    assert transaction['result'] == 'FAILURE'
 
 
 def test_task_instrumentation(flask_celery):
@@ -35,3 +42,4 @@ def test_task_instrumentation(flask_celery):
     transaction = apm_client.events[0]['transactions'][0]
     assert transaction['name'] == 'tests.contrib.celery.flask_tests.successful_task'
     assert transaction['type'] == 'celery'
+    assert transaction['result'] == 'SUCCESS'
